Fixed icons on smaller views.

--- a/assets/css/jumbotron-narrow.css
+++ b/assets/css/jumbotron-narrow.css
@@ -14,7 +14,7 @@
   background-color: rgb(255, 255, 255);
 }
 .bg-image {
-  background-image: url('../img/pdx.webp');
+  background-image: url('../img/splash.jpg');
   background-repeat: no;
   height: 100vh;
 }
@@ -51,9 +51,6 @@
   .container {
     max-width: 730px;
   }
-  .bg-image {
-    background-size: cover;
-  }
 }
 .container-narrow > hr {
   margin: 30px 0;
@@ -89,5 +86,8 @@
   /* Space out the masthead */
   .header {
     margin-bottom: 30px;
+  }
+  .bg-image {
+    background-size: cover;
   }
 }
